@startuml
!theme plain
skinparam backgroundColor #FFFFFF
skinparam defaultFontSize 10
skinparam packageStyle rectangle

title Fashion Store Database Schema

package "Core Entities" {
  entity "users" as users {
    * id: text <<PK>>
    --
    name: text
    email: text <<UNIQUE>>
    password: text
    email_verified: integer
    image: text
    role: text
    two_factor_secret: text
    last_edited_at: integer
    affinity_scores: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "products" as products {
    * id: text <<PK>>
    --
    name: text
    description: text
    price: real
    in_stock: integer <<bool>>
    featured: integer <<bool>>
    position: integer
    is_featured: integer <<bool>>
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "categories" as categories {
    * id: text <<PK>>
    --
    name: text
    slug: text <<UNIQUE>>
    parent_id: text <<FK>>
    materialized_path: text
    position: integer
    is_featured: integer <<bool>>
    locale: text
    created_at: integer
    updated_at: integer
  }
}

package "Pivot/Link Tables" {
  entity "product_category_links" as pcl {
    * id: text <<PK>>
    --
    product_id: text <<FK>>
    category_id: text <<FK>>
    valid_from: integer
    valid_to: integer
    position: integer
    is_featured: integer <<bool>>
    locale: text
    created_by: text <<FK>>
    reason: text
    meta: text <<JSON>>
    deleted_at: integer
    created_at: integer
    updated_at: integer
  }

  entity "product_tag_links" as ptl {
    * id: text <<PK>>
    --
    product_id: text <<FK>>
    tag_id: text <<FK>>
    valid_from: integer
    valid_to: integer
    position: integer
    is_featured: integer <<bool>>
    locale: text
    created_by: text <<FK>>
    reason: text
    meta: text <<JSON>>
    deleted_at: integer
    created_at: integer
    updated_at: integer
  }

  entity "product_attribute_values" as pav {
    * id: text <<PK>>
    --
    product_id: text <<FK>>
    attribute_value_id: text <<FK>>
    valid_from: integer
    valid_to: integer
    position: integer
    is_featured: integer <<bool>>
    locale: text
    created_by: text <<FK>>
    reason: text
    meta: text <<JSON>>
    deleted_at: integer
    created_at: integer
    updated_at: integer
  }

  entity "order_promotions" as op {
    * id: text <<PK>>
    --
    order_id: text <<FK>>
    promotion_id: text <<FK>>
    valid_from: integer
    valid_to: integer
    position: integer
    locale: text
    created_by: text <<FK>>
    reason: text
    meta: text <<JSON>>
    deleted_at: integer
    created_at: integer
    updated_at: integer
  }

  entity "user_wishlist_items" as uwi {
    * id: text <<PK>>
    --
    user_id: text <<FK>>
    wishlist_id: text <<FK>>
    product_id: text <<FK>>
    valid_from: integer
    valid_to: integer
    position: integer
    locale: text
    created_by: text <<FK>>
    reason: text
    meta: text <<JSON>>
    deleted_at: integer
    created_at: integer
    updated_at: integer
  }
}

package "Additional Tables" {
  entity "orders" as orders {
    * id: text <<PK>>
    --
    user_id: text <<FK>>
    total: real
    status: text
    position: integer
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "order_items" as oitems {
    * id: text <<PK>>
    --
    order_id: text <<FK>>
    product_id: text <<FK>>
    quantity: integer
    price: real
    position: integer
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "carts" as carts {
    * id: text <<PK>>
    --
    user_id: text <<FK>>
    session_id: text
    position: integer
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "wishlists" as wishlists {
    * id: text <<PK>>
    --
    user_id: text <<FK>>
    name: text
    position: integer
    is_featured: integer <<bool>>
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "reviews" as reviews {
    * id: text <<PK>>
    --
    user_id: text <<FK>>
    product_id: text <<FK>>
    rating: integer
    comment: text
    position: integer
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "promotions" as promotions {
    * id: text <<PK>>
    --
    name: text
    description: text
    type: text
    value: real
    position: integer
    is_featured: integer <<bool>>
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "tags" as tags {
    * id: text <<PK>>
    --
    name: text
    slug: text <<UNIQUE>>
    position: integer
    is_featured: integer <<bool>>
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "attributes" as attributes {
    * id: text <<PK>>
    --
    name: text
    slug: text <<UNIQUE>>
    position: integer
    is_featured: integer <<bool>>
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "attribute_values" as attr_vals {
    * id: text <<PK>>
    --
    attribute_id: text <<FK>>
    value: text
    position: integer
    is_featured: integer <<bool>>
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "media" as media {
    * id: text <<PK>>
    --
    url: text
    alt: text
    entity_type: text
    entity_id: text
    role: text
    position: integer
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "product_recommendations" as precs {
    * id: text <<PK>>
    --
    product_id: text <<FK>>
    recommended_id: text <<FK>>
    score: real
    position: integer
    locale: text
    meta: text <<JSON>>
    created_at: integer
    updated_at: integer
  }

  entity "link_events" as levents {
    * id: text <<PK>>
    --
    event_type: text
    entity_id: text
    entity_type: text
    user_id: text <<FK>>
    reason: text
    old_values: text <<JSON>>
    new_values: text <<JSON>>
    meta: text <<JSON>>
    created_at: integer
  }

  entity "user_product_interactions" as upi {
    * id: text <<PK>>
    --
    user_id: text <<FK>>
    product_id: text <<FK>>
    interaction_type: text
    position: integer
    locale: text
    meta: text <<JSON>>
    created_at: integer
  }

  entity "site_config" as sc {
    * id: text <<PK>>
    --
    key: text <<UNIQUE>>
    value: text <<JSON>>
    description: text
    created_at: integer
    updated_at: integer
  }
}

users ||--o{ orders : places
orders ||--o{ oitems : contains
products ||--o{ oitems : items
users ||--o{ carts : has
users ||--o{ wishlists : has
users ||--o{ reviews : writes
products ||--o{ reviews : reviews
users ||--o{ upi : interacts_with
products ||--o{ upi : interacted_by
products ||--o{ precs : recommends
products ||--o{ precs : recommended_to
products ||--o{ media : has
categories ||--o{ media : has
users ||--o{ levents : creates
pcl ||--o{ levents : events_for
products ||--o{ pcl : linked_to
categories ||--o{ pcl : linked_from
products ||--o{ ptl : linked_to
tags ||--o{ ptl : linked_from
products ||--o{ pav : has
attr_vals ||--o{ pav : attribute_value
orders ||--o{ op : uses
promotions ||--o{ op : used_by
users ||--o{ uwi : has
wishlists ||--o{ uwi : contains
products ||--o{ uwi : items
categories ||--|o{ categories : parent_child
attributes ||--o{ attr_vals : has_attributes
</entity>
@enduml